testsuite/tests/linear/should_fail/LinearKind.hs
{-# LANGUAGE LinearTypes #-}
module LinearKind where

data A :: * %1 -> *
